# jukebox-of-musical-ideas

./: .gitignore  README.md  pyproject.toml
jukebox_of_musical_ideas/: chordprogression.py  main.py  song.py
