[tool.poetry]
name = "jukebox-of-musical-ideas"
version = "0.1.0"
description = ""
authors = ["jkarenko <juho.karenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
musicpy = "^6.92"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pydub = "^0.25.1"
sf2-loader = "^1.25"
pedalboard = "^0.9.16"
scipy = "^1.14.1"
numpy = "^2.2.1"
pyfluidsynth = "^1.3.4"
fluidsynth = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn jukebox_of_musical_ideas.main:app --reload"
